# database-downloader

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
src/: main.rs
src/scheduler/: mod.rs
src/upload/: mod.rs
